# scheduling-backend

./: Cargo.toml
.github/workflows/: rust.yml
migrations/: 0001_create_tasks_table.sql  0001_initial_schema.sql
src/: data_model.rs  handlers.rs  lib.rs  main.rs  protocol.rs  scheduling.rs
src/data_model/: device.rs  event.rs  graph.rs  mod.rs  task.rs  time.rs
src/extractors/: auth.rs
src/handlers/: accounts.rs  devices.rs  mod.rs  tasks.rs
src/protocol/: accounts.rs  devices.rs  tasks.rs
